kubernetes/load-balancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: exposer
spec:
  selector:
    app: homecook
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  loadBalancerIP: "35.193.145.96"
