kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fanout-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: meme
          servicePort: 8080
      - path: /v1/user/*
        backend:
          serviceName: homecook-users
          servicePort: 8080
      - path: /v1/chef/*
        backend:
          serviceName: homecook-chefs
          servicePort: 8081
